--- a/vForum/Info.plist
+++ b/vForum/Info.plist
@@ -55,14 +55,14 @@
         <false/>
         <key>NSExceptionDomains</key>
         <dict>
-            <key>https://localhost:4000/</key>
+            <key>localhost</key>
             <dict>
                 <key>NSIncludesSubdomains</key>
                 <true/>
                 <key>NSExceptionAllowsInsecureHTTPLoads</key>
                 <true/>
-                <key>NSExceptionRequiresForwardSecrecy</key>
-                <true/>
+                <key>NSTemporaryExceptionMinimumTLSVersion</key>
+                <string>TLSv1.1</string>
             </dict>
         </dict>
     </dict>
